# rapidcube

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
.github/workflows/: CI.yml
benchmarks/: test_python_module_bench.py
docs/: index.html  rapidcube.html  search.js
examples/: main.py
fastcube/: Cargo.toml  pyproject.toml
fastcube/src/: lib.rs
fastcube/src/cube2x2/: mod.rs  moves.rs  render.rs
fastcube/src/cube3x3/: mod.rs  moves.rs  render.rs
fastcube/tests/: test_cube2x2.py
rapidcube/: pyproject.toml
rapidcube/src/: lib.rs
rapidcube/src/cube3x3/: mod.rs
src/: lib.rs
src/cube2x2/: mod.rs  moves.rs  pymethods.rs  render.rs  utils.rs
src/cube3x3/: mod.rs  moves.rs  pymethods.rs  render.rs  solver.rs  utils.rs
tests/: test_cube2x2.py  test_cube3x3.py
